# ardent_locomotion_planner

./: CMakeLists.txt  README.md  package.xml
scripts/: add_object.cpp  leg_move_interface_test.cpp  leg_move_simple_test.py
src/: leg_trajectory_client.cc  leg_trajectory_client.cpp
